@@ -1,9 +1,13 @@
-checkLearner = function(learner, type, weights = FALSE) {
-  checkArg(learner, "Learner")
-  if (learner$type != type)
+checkLearner = function(learner, type = NULL, weights = FALSE, ...) {
+  if (is.character(learner))
+    learner = makeLearner(learner)
+  else
+    checkArg(learner, "Learner")
+  if (!is.null(type) && learner$type != type)
     stopf("Learner '%s' must be of type %s, not: %s", learner$id, type, learner$type)
   if (weights && !learner$weights)
     stopf("Learner '%s' must support weights, but does not!", learner$id)
+  setHyperPars(learner, ...)
 }
 
 checkLearnerClassif = function(learner, weights = FALSE) {
