@@ -18,7 +18,7 @@ makeResampleDesc(method, predict = "test", ..., stratify = FALSE)
   \dQuote{both} sets.  Default is \dQuote{test}.}
 
   \item{...}{[any]\cr Further parameters for strategies.\cr
-  \describe{ \item{iters [\code{numeric(1)}]}{Number of
+  \describe{ \item{iters [\code{integer(1)}]}{Number of
   iterations, for \dQuote{CV}, \dQuote{Subsample} and
   \dQuote{Boostrap}} \item{split
   [\code{numeric(1)}]}{Proportion of training cases for
